--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -7,8 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.15.3",
+    "antd-mobile": "^2.3.4",
+    "axios": "^0.21.1",
+    "image-conversion": "^2.1.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
